force-app/main/default/objects/Utilization_report_line__c/Utilization_report_line__c.object-meta.xml
<CustomObject>
    <description>Fill up by batch</description>
    <label>Utilisation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utilisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>