force-app/main/default/objects/Utilization_report_line__c/fields/Backward__c.field-meta.xml
<CustomField>
    <fullName>Backward__c</fullName>
    <label>Backward</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>