force-app/main/default/objects/Utilization_report_line__c/fields/ICON_Outreaches_per_day__c.field-meta.xml
<CustomField>
    <fullName>ICON_Outreaches_per_day__c</fullName>
    <label>ICON Outreaches per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>