force-app/main/default/objects/Utilization_report_line__c/fields/ICONICS_Inbound_emails_per_day__c.field-meta.xml
<CustomField>
    <fullName>ICONICS_Inbound_emails_per_day__c</fullName>
    <label>ICONICS Inbound emails per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>