force-app/main/default/objects/Utilization_report_line__c/fields/ICONICS_Operation_exceptions__c.field-meta.xml
<CustomField>
    <fullName>ICONICS_Operation_exceptions__c</fullName>
    <label>ICONICS Operation exceptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>