force-app/main/default/objects/Utilization_report_line__c/fields/ICONICS_Users__c.field-meta.xml
<CustomField>
    <fullName>ICONICS_Users__c</fullName>
    <label>ICONICS Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>