force-app/main/default/objects/Utilization_report_line__c/fields/IDENTITY_Logins__c.field-meta.xml
<CustomField>
    <fullName>IDENTITY_Logins__c</fullName>
    <label>IDENTITY Logged clients per month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>