force-app/main/default/objects/Utilization_report_line__c/fields/IDENTITY_New_Wechat_users_per_day__c.field-meta.xml
<CustomField>
    <fullName>IDENTITY_New_Wechat_users_per_day__c</fullName>
    <label>IDENTITY New Wechat users per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>