force-app/main/default/objects/Utilization_report_line__c/fields/IDENTITY_Registrations_per_day__c.field-meta.xml
<CustomField>
    <fullName>IDENTITY_Registrations_per_day__c</fullName>
    <label>IDENTITY Registrations per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>