force-app/main/default/objects/Utilization_report_line__c/fields/Iso3_code__c.field-meta.xml
<CustomField>
    <fullName>Iso3_code__c</fullName>
    <label>Iso3 code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>