force-app/main/default/objects/Utilization_report_line__c/fields/Last__c.field-meta.xml
<CustomField>
    <fullName>Last__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last</label>
    <type>Checkbox</type>
</CustomField>