force-app/main/default/objects/Utilization_report_line__c/fields/MESSAGING_ABC__c.field-meta.xml
<CustomField>
    <fullName>MESSAGING_ABC__c</fullName>
    <label>MESSAGING ABC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>