force-app/main/default/objects/Utilization_report_line__c/fields/MESSAGING_per_day__c.field-meta.xml
<CustomField>
    <fullName>MESSAGING_per_day__c</fullName>
    <formula>MESSAGING_ABC__c +  MESSAGING_Whatsapp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MESSAGING per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>