force-app/main/default/objects/Utilization_report_line__c/fields/MESSAGING_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>MESSAGING_Whatsapp__c</fullName>
    <label>MESSAGING Whatsapp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>