force-app/main/default/objects/Utilization_report_line__c/fields/Mngt_level_2__c.field-meta.xml
<CustomField>
    <fullName>Mngt_level_2__c</fullName>
    <label>Mngt level 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>