force-app/main/default/objects/Utilization_report_line__c/fields/ORDERS_Personalisations_per_day__c.field-meta.xml
<CustomField>
    <fullName>ORDERS_Personalisations_per_day__c</fullName>
    <label>ORDERS Personalisations per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>