force-app/main/default/objects/Utilization_report_line__c/fields/ORDERS_Special_per_day__c.field-meta.xml
<CustomField>
    <fullName>ORDERS_Special_per_day__c</fullName>
    <label>ORDERS Special per day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>