force-app/main/default/objects/Utilization_report_line__c/fields/Voice_surveys_per_day__c.field-meta.xml
<CustomField>
    <fullName>Voice_surveys_per_day__c</fullName>
    <label>VOICE surveys per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>