force-app/main/default/objects/Utilization_report_line__c/fields/WARDROBING_Inspiration_creations_per_day__c.field-meta.xml
<CustomField>
    <fullName>WARDROBING_Inspiration_creations_per_day__c</fullName>
    <label>WARDROBING Inspiration creations per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>