force-app/main/default/objects/Utilization_report_line__c/fields/WARDROBING_Sent_looks_per_day__c.field-meta.xml
<CustomField>
    <fullName>WARDROBING_Sent_looks_per_day__c</fullName>
    <label>WARDROBING Sent looks per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>